--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
   "scripts": {
-    "start": "nodemon index.js"
+    "build": "npx tsc",
+    "start": "nodemon dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "@aws-sdk/client-sagemaker": "^3.299.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
-  }
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.10",
+    "concurrently": "^7.6.0",
+    "nodemon": "^2.0.22",
+    "typescript": "^5.0.2"
+  },
+  "name": "codespaces-express",
+  "description": "Welcome to your shiny new Codespace running Express! We've got everything fired up and running for you to explore Express.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
