--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@aws-sdk/client-sagemaker": "^3.299.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.10",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.22",
