--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.299.0",
     "@aws-sdk/client-sagemaker": "^3.299.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
