--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "nodemon dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "watch": "npx tsc --watch",
+    "dev": "concurrently npm:watch npm:start"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.299.0",
